2013-06-28  Gabriel Dos Reis  <gdr@integrable-solutions.net>

	* gui/conversation.cc (accumulate_paragraphs): Remove.
	(read_output): Remove.
	(OutputTextArea::add_paragraph): Rewrite.
	(Conversation::read_reply): Likewise.

2013-06-27  Gabriel Dos Reis  <gdr@integrable-solutions.net>

	* src/rt: New directory.  Move vm.cc and Lisp.cc here.
	* rt/Database.cc: New.
	* include/Database.H: Likewise.
	* include/Constructor.H: Likewise.
	* gui/server.h (Server): Cache database input souece.
	* gui/gui.pro.in (LIBS): Add core runtime library.
	* Makefile.am (oa_src_include_headers): Add Constructor.H and
	Database.H.

2013-06-27  Gabriel Dos Reis  <gdr@integrable-solutions.net>

	* include/Lisp.H: New.
	* utils/Lisp.cc: Likewise.
	* gui/server.h (Server::lisp): Give access to embedded Lisp evaluator.
	* gui/main-window.cc (MainWind::read_databases): Use embedded Lisp
	evaluator.
	* include/vm.H: Move from src/utils/.
	* Makefile.am (oa_src_include_headers): Include vm.H.

2013-06-27  Gabriel Dos Reis  <gdr@integrable-solutions.net>

	* interp/lisplib.boot (compDefineLisplib): Close the file
	contained generated code before handing over to backend.
	* interp/c-util.boot (moveLibdirByCopy): The inferred destination
	directory is not absolute.

2013-06-26  Gabriel Dos Reis  <gdr@integrable-solutions.net>

	* include/sexpr.H (Lexer): Remove.
	(Parser): Likewise.
	(Reader): New.
	* syntax/sexpr.cc: Propagate changes.
	* gui/main-window.h (MainWindow::read_databases): Declare.
	(MainWindow::display_error): Likewise.
	* gui/main-window.cc: Implement.
	* gui/gui.pro.in (LIBS): Include syntax library.
	* Makefile.am (oa_src_include_headers): Add sexpr.H.  Fix build
	failure from previous commit.

2013-06-24  Gabriel Dos Reis  <gdr@integrable-solutions.net>

	* include/sexpr.H: Move from utils.
	(UniqueAllocator): Remove.
	(SyntaxComparator): Likewise.
	* syntax/sexpr.cc: Move from utils.

2013-06-24  Gabriel Dos Reis  <gdr@integrable-solutions.net>
